feat: basic skeleton for signup web page outside RN app

--- a/backend/views/layout.gohtml
+++ b/backend/views/layout.gohtml
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +15,13 @@
             font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         }
     </style>
+    {{block "style" .}}
+    {{end}}
 </head>
+
 <body>
     {{block "body" .}}
     {{end}}
 </body>
+
 </html>
