--- a/backend/views/layout.gohtml
+++ b/backend/views/layout.gohtml
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/favicon.ico" sizes="32x32">
+    <link rel="icon" href="/suntimes-icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <title>{{block "title" .}}Suntimes App{{end}}</title>
     <!-- TODO favicon -->
     <style>
